it-tools/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tools.mandariini.uk`)
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: it-tools
          namespace: it-tools
          port: 80
    - kind: Rule
      match: "Host(`tools.mandariini.uk`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
          - kind: Service
            name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
            port: 9000
  tls:
    secretName: mandariini-uk-tls
