it-tools/it-tools.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: it-tools
  name: it-tools
  namespace: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: it-tools
          image: corentinth/it-tools:2024.10.22-7ca5933
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 101
            capabilities:
              drop:
              - ALL
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp
              name: emptydir
              subPath: tmp-dir
            - mountPath: /run
              name: emptydir
              subPath: run-dir
            - mountPath: /var/cache/nginx/client_temp
              name: emptydir
              subPath: client-temp-dir
            - mountPath: /var/cache/nginx/proxy_temp
              name: emptydir
              subPath: proxy-temp-dir
            - mountPath: /var/cache/nginx/fastcgi_temp
              name: emptydir
              subPath: fastcgi-temp-dir
            - mountPath: /var/cache/nginx/uwsgi_temp
              name: emptydir
              subPath: uwsgi-temp-dir
            - mountPath: /var/cache/nginx/scgi_temp
              name: emptydir
              subPath: scgi-temp-dir
      volumes:
        - emptyDir: {}
          name: emptydir
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: it-tools
  name: it-tools
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tools.mandariini.uk`)
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: it-tools
          namespace: it-tools
          port: 80
    - kind: Rule
      match: "Host(`tools.mandariini.uk`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
          - kind: Service
            name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
            port: 9000
  tls:
    secretName: mandariini-uk-tls
